--- a/index.html
+++ b/index.html
@@ -28,15 +28,6 @@
                         <a href="#socials">Social Media</a>
                     </li>
                 </ul>
-                <div class="nav-btn-wrapper">
-                    <button class="material-icons nav-btn">menu</button>
-                    <div class="drop-down-wrapper">
-                        <a href="#">Home</a>
-                        <a href="#offer">What do we offer?</a>
-                        <a href="#about">About us</a>
-                        <a href="#socials">Social Media</a>
-                    </div>
-                </div>
             </nav>
 
             <section class="top">
@@ -46,6 +37,16 @@
                     <a class="btn" href="#about">Where to find us?</a>
                 </div>
             </section>
+        </div>
+
+        <div class="nav-btn-wrapper">
+            <button class="material-icons nav-btn">menu</button>
+            <div class="drop-down-wrapper" data-show="false">
+                <a class="drop-down-item" href="#">Home</a>
+                <a class="drop-down-item" href="#offer">What do we offer?</a>
+                <a class="drop-down-item" href="#about">About us</a>
+                <a class="drop-down-item" href="#socials">Social Media</a>
+            </div>
         </div>
 
         <h1 class="offer-header" id="offer">What do we offer?</h1>
@@ -88,9 +89,9 @@
                 <a class="social-icon" href="https://www.twitter.com" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/174/174876.png" alt="Twitter"></a>
                 <a class="social-icon" href="https://www.youtube.com" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/174/174883.png" alt="Youtube"></a>
             </div>
-            <p class="legal">Copyright &copy; 2022 Laszlo Bozzay</p>
+            <p class="legal">Copyright &copy; 2022 Xyz Xyz</p>
         </footer>
     </div>
-<!-- <script src="./script.js"></script> -->
+<script src="./script.js"></script>
 </body>
 </html>
